@@ -1,15 +1,17 @@
 package mmrnmhrm.core.launch;
 
-import static melnorme.utilbox.core.Assert.AssertNamespace.assertFail;
-
 import java.util.List;
 
 import mmrnmhrm.core.DeeCore;
 
+import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.dltk.core.environment.IFileHandle;
+import org.eclipse.dltk.launching.EnvironmentVariable;
 import org.eclipse.dltk.launching.IInterpreterInstall;
 import org.eclipse.dltk.launching.LibraryLocation;
+
+import dtool.util.NewUtils;
 
 public class GenericInstallType extends CommonInstallType {
 	
@@ -17,17 +19,24 @@ public class GenericInstallType extends CommonInstallType {
 	
 	@Override
 	public String getName() {
-		return "Generic compiler";
+		return "Generic/other D compiler";
+	}
+	
+	@Override
+	public IStatus validateInstallLocation(IFileHandle installLocation, EnvironmentVariable[] variables,
+		LibraryLocation[] libraryLocations, IProgressMonitor monitor) {
+		// Generic/other compiler can be at any location
+		return createStatus(IStatus.OK, null, null);
 	}
 	
 	@Override
 	public IStatus validatePossiblyName(IFileHandle installLocation) {
-		return createStatus(IStatus.OK, "", null);
+		return super.validatePossiblyName(installLocation);
 	}
 	
 	@Override
 	protected String[] getPossibleInterpreterNames() {
-		throw assertFail();
+		return NewUtils.EMPTY_STRING_ARRAY;
 	}
 	
 	@Override
